samples/_failures_safe/1761296375_ca887a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_333084fe.c: In function ‘main’:
./samples/SAFE/__tmp_333084fe.c:176: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_333084fe.c:175:5: error: expected declaration or statement at end of input
  175 |     while
      |     ^~~~~
